@@ -1,8 +1,11 @@
 package com.mopl.domain.service.playlist;
 
+import com.mopl.domain.exception.playlist.PlaylistContentAlreadyExistsException;
 import com.mopl.domain.exception.playlist.PlaylistContentNotFoundException;
-import com.mopl.domain.exception.playlist.PlaylistForbiddenException;
 import com.mopl.domain.exception.playlist.PlaylistNotFoundException;
+import com.mopl.domain.fixture.ContentModelFixture;
+import com.mopl.domain.fixture.PlaylistModelFixture;
+import com.mopl.domain.fixture.UserModelFixture;
 import com.mopl.domain.model.content.ContentModel;
 import com.mopl.domain.model.playlist.PlaylistModel;
 import com.mopl.domain.model.user.UserModel;
@@ -46,54 +49,19 @@ class PlaylistServiceTest {
     @InjectMocks
     private PlaylistService playlistService;
 
-    private UserModel createOwner() {
-        return UserModel.builder()
-            .id(UUID.randomUUID())
-            .email("owner@example.com")
-            .name("소유자")
-            .build();
-    }
-
-    private PlaylistModel createPlaylist(UserModel owner) {
-        return PlaylistModel.builder()
-            .id(UUID.randomUUID())
-            .owner(owner)
-            .title("테스트 플레이리스트")
-            .description("테스트 설명")
-            .build();
-    }
-
-    private ContentModel createContent() {
-        return ContentModel.builder()
-            .id(UUID.randomUUID())
-            .type(ContentModel.ContentType.movie)
-            .title("테스트 콘텐츠")
-            .description("테스트 설명")
-            .thumbnailUrl("https://example.com/thumbnail.jpg")
-            .build();
-    }
-
     @Nested
     @DisplayName("getAll()")
     class GetAllTest {
 
         @Test
-        @DisplayName("정상 조회 시 CursorResponse 반환")
-        void withValidRequest_returnsCursorResponse() {
+        @DisplayName("Repository에 위임하여 결과 반환")
+        void delegatesToRepository() {
             // given
-            UserModel owner = createOwner();
-            PlaylistModel playlist = createPlaylist(owner);
             PlaylistQueryRequest request = new PlaylistQueryRequest(
                 null, null, null, null, null, 10, SortDirection.ASCENDING, null
             );
-            CursorResponse<PlaylistModel> expectedResponse = CursorResponse.of(
-                List.of(playlist),
-                "nextCursor",
-                UUID.randomUUID(),
-                true,
-                1L,
-                "updatedAt",
-                SortDirection.ASCENDING
+            CursorResponse<PlaylistModel> expectedResponse = CursorResponse.empty(
+                "updatedAt", SortDirection.ASCENDING
             );
 
             given(playlistQueryRepository.findAll(request)).willReturn(expectedResponse);
@@ -103,31 +71,7 @@ class PlaylistServiceTest {
 
             // then
             assertThat(result).isEqualTo(expectedResponse);
-            assertThat(result.data()).hasSize(1);
             then(playlistQueryRepository).should().findAll(request);
-        }
-
-        @Test
-        @DisplayName("결과가 없으면 빈 CursorResponse 반환")
-        void withNoResults_returnsEmptyCursorResponse() {
-            // given
-            PlaylistQueryRequest request = new PlaylistQueryRequest(
-                null, null, null, null, null, 10, SortDirection.ASCENDING, null
-            );
-            CursorResponse<PlaylistModel> emptyResponse = CursorResponse.empty(
-                "updatedAt",
-                SortDirection.ASCENDING
-            );
-
-            given(playlistQueryRepository.findAll(request)).willReturn(emptyResponse);
-
-            // when
-            CursorResponse<PlaylistModel> result = playlistService.getAll(request);
-
-            // then
-            assertThat(result.data()).isEmpty();
-            assertThat(result.hasNext()).isFalse();
-            assertThat(result.totalCount()).isZero();
         }
     }
 
@@ -140,8 +84,7 @@ class PlaylistServiceTest {
         void withExistingPlaylistId_returnsPlaylistModel() {
             // given
             UUID playlistId = UUID.randomUUID();
-            UserModel owner = createOwner();
-            PlaylistModel playlistModel = createPlaylist(owner);
+            PlaylistModel playlistModel = PlaylistModelFixture.create();
 
             given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
 
@@ -160,11 +103,15 @@ class PlaylistServiceTest {
             UUID playlistId = UUID.randomUUID();
 
             given(playlistCacheService.getById(playlistId))
-                .willThrow(new PlaylistNotFoundException(playlistId));
+                .willThrow(PlaylistNotFoundException.withId(playlistId));
 
             // when & then
             assertThatThrownBy(() -> playlistService.getById(playlistId))
-                .isInstanceOf(PlaylistNotFoundException.class);
+                .isInstanceOf(PlaylistNotFoundException.class)
+                .satisfies(e -> {
+                    PlaylistNotFoundException ex = (PlaylistNotFoundException) e;
+                    assertThat(ex.getDetails().get("id")).isEqualTo(playlistId);
+                });
 
             then(playlistCacheService).should().getById(playlistId);
         }
@@ -179,7 +126,7 @@ class PlaylistServiceTest {
         void withExistingPlaylistId_returnsContents() {
             // given
             UUID playlistId = UUID.randomUUID();
-            ContentModel content = createContent();
+            ContentModel content = ContentModelFixture.create();
             List<ContentModel> contents = List.of(content);
 
             given(playlistCacheService.getContentsByPlaylistId(playlistId)).willReturn(contents);
@@ -189,7 +136,7 @@ class PlaylistServiceTest {
 
             // then
             assertThat(result).hasSize(1);
-            assertThat(result.get(0)).isEqualTo(content);
+            assertThat(result.getFirst()).isEqualTo(content);
             then(playlistCacheService).should().getContentsByPlaylistId(playlistId);
         }
 
@@ -210,8 +157,8 @@ class PlaylistServiceTest {
     }
 
     @Nested
-    @DisplayName("getContentsByPlaylistIds()")
-    class GetContentsByPlaylistIdsTest {
+    @DisplayName("getContentsByPlaylistIdIn()")
+    class GetContentsByPlaylistIdInTest {
 
         @Test
         @DisplayName("여러 플레이리스트의 콘텐츠 조회")
@@ -221,18 +168,18 @@ class PlaylistServiceTest {
             UUID playlistId2 = UUID.randomUUID();
             List<UUID> playlistIds = List.of(playlistId1, playlistId2);
 
-            ContentModel content1 = createContent();
-            ContentModel content2 = createContent();
+            ContentModel content1 = ContentModelFixture.create();
+            ContentModel content2 = ContentModelFixture.create();
             Map<UUID, List<ContentModel>> expectedMap = Map.of(
                 playlistId1, List.of(content1),
                 playlistId2, List.of(content2)
             );
 
-            given(playlistContentRepository.findContentsByPlaylistIds(playlistIds))
+            given(playlistContentRepository.findContentsByPlaylistIdIn(playlistIds))
                 .willReturn(expectedMap);
 
             // when
-            Map<UUID, List<ContentModel>> result = playlistService.getContentsByPlaylistIds(
+            Map<UUID, List<ContentModel>> result = playlistService.getContentsByPlaylistIdIn(
                 playlistIds);
 
             // then
@@ -247,11 +194,11 @@ class PlaylistServiceTest {
             // given
             List<UUID> emptyIds = List.of();
 
-            given(playlistContentRepository.findContentsByPlaylistIds(emptyIds))
+            given(playlistContentRepository.findContentsByPlaylistIdIn(emptyIds))
                 .willReturn(Map.of());
 
             // when
-            Map<UUID, List<ContentModel>> result = playlistService.getContentsByPlaylistIds(
+            Map<UUID, List<ContentModel>> result = playlistService.getContentsByPlaylistIdIn(
                 emptyIds);
 
             // then
@@ -267,21 +214,21 @@ class PlaylistServiceTest {
         @DisplayName("유효한 플레이리스트 생성")
         void withValidPlaylist_createsPlaylist() {
             // given
-            UserModel owner = createOwner();
-            String title = "내 플레이리스트";
-            String description = "플레이리스트 설명";
+            UserModel owner = UserModelFixture.create();
+            PlaylistModel playlistModel = PlaylistModel.create(
+                "내 플레이리스트",
+                "플레이리스트 설명",
+                owner
+            );
 
-            given(playlistCacheService.save(any(PlaylistModel.class)))
-                .willAnswer(invocation -> invocation.getArgument(0));
+            given(playlistCacheService.save(playlistModel)).willReturn(playlistModel);
 
             // when
-            PlaylistModel result = playlistService.create(owner, title, description);
+            PlaylistModel result = playlistService.create(playlistModel);
 
             // then
-            assertThat(result.getOwner()).isEqualTo(owner);
-            assertThat(result.getTitle()).isEqualTo(title);
-            assertThat(result.getDescription()).isEqualTo(description);
-            then(playlistCacheService).should().save(any(PlaylistModel.class));
+            assertThat(result).isEqualTo(playlistModel);
+            then(playlistCacheService).should().save(playlistModel);
         }
     }
 
@@ -290,73 +237,21 @@ class PlaylistServiceTest {
     class UpdateTest {
 
         @Test
-        @DisplayName("소유자가 플레이리스트 수정 성공")
-        void withOwner_updatesPlaylist() {
+        @DisplayName("플레이리스트 수정 성공")
+        void withValidPlaylist_updatesPlaylist() {
             // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = owner.getId();
-            PlaylistModel playlistModel = createPlaylist(owner);
-            String newTitle = "수정된 제목";
-            String newDescription = "수정된 설명";
+            UserModel owner = UserModelFixture.create();
+            PlaylistModel playlistModel = PlaylistModelFixture.create(owner);
+            PlaylistModel updatedPlaylist = playlistModel.update("수정된 제목", "수정된 설명");
 
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-            given(playlistCacheService.save(any(PlaylistModel.class)))
-                .willAnswer(invocation -> invocation.getArgument(0));
+            given(playlistCacheService.save(updatedPlaylist)).willReturn(updatedPlaylist);
 
             // when
-            PlaylistModel result = playlistService.update(playlistId, requesterId, newTitle,
-                newDescription);
+            PlaylistModel result = playlistService.update(updatedPlaylist);
 
             // then
-            assertThat(result.getTitle()).isEqualTo(newTitle);
-            assertThat(result.getDescription()).isEqualTo(newDescription);
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistCacheService).should().save(playlistModel);
-        }
-
-        @Test
-        @DisplayName("소유자가 아닌 사용자가 수정 시 PlaylistForbiddenException 발생")
-        void withNonOwner_throwsPlaylistForbiddenException() {
-            // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.update(playlistId, requesterId, "새 제목",
-                "새 설명"))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistCacheService).should(never()).save(any(PlaylistModel.class));
-        }
-
-        @Test
-        @DisplayName("owner가 null인 플레이리스트 수정 시 PlaylistForbiddenException 발생")
-        void withNullOwner_throwsPlaylistForbiddenException() {
-            // given
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            PlaylistModel playlistModel = PlaylistModel.builder()
-                .id(playlistId)
-                .owner(null)
-                .title("테스트")
-                .description("설명")
-                .build();
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.update(playlistId, requesterId, "새 제목",
-                "새 설명"))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistCacheService).should(never()).save(any(PlaylistModel.class));
+            assertThat(result).isEqualTo(updatedPlaylist);
+            then(playlistCacheService).should().save(updatedPlaylist);
         }
     }
 
@@ -365,65 +260,18 @@ class PlaylistServiceTest {
     class DeleteTest {
 
         @Test
-        @DisplayName("소유자가 플레이리스트 삭제 성공")
-        void withOwner_deletesPlaylist() {
+        @DisplayName("플레이리스트 삭제 성공")
+        void withValidPlaylist_deletesPlaylist() {
             // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = owner.getId();
-            PlaylistModel playlistModel = createPlaylist(owner);
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
+            UserModel owner = UserModelFixture.create();
+            PlaylistModel playlistModel = PlaylistModelFixture.create(owner);
 
             // when
-            playlistService.delete(playlistId, requesterId);
+            playlistService.delete(playlistModel);
 
             // then
             assertThat(playlistModel.isDeleted()).isTrue();
-            then(playlistCacheService).should().getById(playlistId);
             then(playlistCacheService).should().saveAndEvict(playlistModel);
-        }
-
-        @Test
-        @DisplayName("소유자가 아닌 사용자가 삭제 시 PlaylistForbiddenException 발생")
-        void withNonOwner_throwsPlaylistForbiddenException() {
-            // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.delete(playlistId, requesterId))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistCacheService).should(never()).saveAndEvict(any(PlaylistModel.class));
-        }
-
-        @Test
-        @DisplayName("owner가 null인 플레이리스트 삭제 시 PlaylistForbiddenException 발생")
-        void withNullOwner_throwsPlaylistForbiddenException() {
-            // given
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            PlaylistModel playlistModel = PlaylistModel.builder()
-                .id(playlistId)
-                .owner(null)
-                .title("테스트")
-                .description("설명")
-                .build();
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.delete(playlistId, requesterId))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistCacheService).should(never()).saveAndEvict(any(PlaylistModel.class));
         }
     }
 
@@ -432,69 +280,40 @@ class PlaylistServiceTest {
     class AddContentTest {
 
         @Test
-        @DisplayName("소유자가 콘텐츠 추가 성공")
-        void withOwner_addsContent() {
+        @DisplayName("콘텐츠 추가 성공")
+        void withValidContent_addsContent() {
             // given
-            UserModel owner = createOwner();
             UUID playlistId = UUID.randomUUID();
-            UUID requesterId = owner.getId();
             UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
 
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
+            given(playlistContentRepository.exists(playlistId, contentId)).willReturn(false);
 
             // when
-            playlistService.addContent(playlistId, requesterId, contentId);
+            playlistService.addContent(playlistId, contentId);
 
             // then
-            then(playlistCacheService).should().getById(playlistId);
+            then(playlistContentRepository).should().exists(playlistId, contentId);
             then(playlistContentRepository).should().save(playlistId, contentId);
-            then(playlistCacheService).should().evictContents(playlistId);
         }
 
         @Test
-        @DisplayName("소유자가 아닌 사용자가 콘텐츠 추가 시 PlaylistForbiddenException 발생")
-        void withNonOwner_throwsPlaylistForbiddenException() {
-            // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(
-                () -> playlistService.addContent(playlistId, requesterId, contentId))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistContentRepository).should(never()).save(any(UUID.class), any(UUID.class));
-            then(playlistCacheService).should(never()).evictContents(any(UUID.class));
-        }
-
-        @Test
-        @DisplayName("owner가 null인 플레이리스트에 콘텐츠 추가 시 PlaylistForbiddenException 발생")
-        void withNullOwner_throwsPlaylistForbiddenException() {
+        @DisplayName("이미 존재하는 콘텐츠 추가 시 PlaylistContentAlreadyExistsException 발생")
+        void withExistingContent_throwsPlaylistContentAlreadyExistsException() {
             // given
             UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
             UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = PlaylistModel.builder()
-                .id(playlistId)
-                .owner(null)
-                .title("테스트")
-                .description("설명")
-                .build();
 
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
+            given(playlistContentRepository.exists(playlistId, contentId)).willReturn(true);
 
             // when & then
-            assertThatThrownBy(
-                () -> playlistService.addContent(playlistId, requesterId, contentId))
-                .isInstanceOf(PlaylistForbiddenException.class);
+            assertThatThrownBy(() -> playlistService.addContent(playlistId, contentId))
+                .isInstanceOf(PlaylistContentAlreadyExistsException.class)
+                .satisfies(e -> {
+                    PlaylistContentAlreadyExistsException ex = (PlaylistContentAlreadyExistsException) e;
+                    assertThat(ex.getDetails().get("playlistId")).isEqualTo(playlistId);
+                    assertThat(ex.getDetails().get("contentId")).isEqualTo(contentId);
+                });
 
-            then(playlistCacheService).should().getById(playlistId);
             then(playlistContentRepository).should(never()).save(any(UUID.class), any(UUID.class));
         }
     }
@@ -504,94 +323,38 @@ class PlaylistServiceTest {
     class RemoveContentTest {
 
         @Test
-        @DisplayName("소유자가 콘텐츠 삭제 성공")
-        void withOwner_removesContent() {
+        @DisplayName("콘텐츠 삭제 성공")
+        void withExistingContent_removesContent() {
             // given
-            UserModel owner = createOwner();
             UUID playlistId = UUID.randomUUID();
-            UUID requesterId = owner.getId();
             UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
 
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-            given(playlistContentRepository.delete(playlistId, contentId)).willReturn(true);
+            given(playlistContentRepository.deleteByPlaylistIdAndContentId(playlistId, contentId)).willReturn(true);
 
             // when
-            playlistService.removeContent(playlistId, requesterId, contentId);
+            playlistService.deleteContentFromPlaylist(playlistId, contentId);
 
             // then
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistContentRepository).should().delete(playlistId, contentId);
-            then(playlistCacheService).should().evictContents(playlistId);
-        }
-
-        @Test
-        @DisplayName("소유자가 아닌 사용자가 콘텐츠 삭제 시 PlaylistForbiddenException 발생")
-        void withNonOwner_throwsPlaylistForbiddenException() {
-            // given
-            UserModel owner = createOwner();
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.removeContent(playlistId, requesterId,
-                contentId))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistContentRepository).should(never()).delete(any(UUID.class), any(
-                UUID.class));
-            then(playlistCacheService).should(never()).evictContents(any(UUID.class));
+            then(playlistContentRepository).should().deleteByPlaylistIdAndContentId(playlistId, contentId);
         }
 
         @Test
         @DisplayName("존재하지 않는 콘텐츠 삭제 시 PlaylistContentNotFoundException 발생")
         void withNonExistingContent_throwsPlaylistContentNotFoundException() {
             // given
-            UserModel owner = createOwner();
             UUID playlistId = UUID.randomUUID();
-            UUID requesterId = owner.getId();
             UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = createPlaylist(owner);
 
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-            given(playlistContentRepository.delete(playlistId, contentId)).willReturn(false);
+            given(playlistContentRepository.deleteByPlaylistIdAndContentId(playlistId, contentId)).willReturn(false);
 
             // when & then
-            assertThatThrownBy(() -> playlistService.removeContent(playlistId, requesterId,
-                contentId))
-                .isInstanceOf(PlaylistContentNotFoundException.class);
-
-            then(playlistCacheService).should(never()).evictContents(any(UUID.class));
-        }
-
-        @Test
-        @DisplayName("owner가 null인 플레이리스트에서 콘텐츠 삭제 시 PlaylistForbiddenException 발생")
-        void withNullOwner_throwsPlaylistForbiddenException() {
-            // given
-            UUID playlistId = UUID.randomUUID();
-            UUID requesterId = UUID.randomUUID();
-            UUID contentId = UUID.randomUUID();
-            PlaylistModel playlistModel = PlaylistModel.builder()
-                .id(playlistId)
-                .owner(null)
-                .title("테스트")
-                .description("설명")
-                .build();
-
-            given(playlistCacheService.getById(playlistId)).willReturn(playlistModel);
-
-            // when & then
-            assertThatThrownBy(() -> playlistService.removeContent(playlistId, requesterId,
-                contentId))
-                .isInstanceOf(PlaylistForbiddenException.class);
-
-            then(playlistCacheService).should().getById(playlistId);
-            then(playlistContentRepository).should(never()).delete(any(UUID.class), any(
-                UUID.class));
+            assertThatThrownBy(() -> playlistService.deleteContentFromPlaylist(playlistId, contentId))
+                .isInstanceOf(PlaylistContentNotFoundException.class)
+                .satisfies(e -> {
+                    PlaylistContentNotFoundException ex = (PlaylistContentNotFoundException) e;
+                    assertThat(ex.getDetails().get("playlistId")).isEqualTo(playlistId);
+                    assertThat(ex.getDetails().get("contentId")).isEqualTo(contentId);
+                });
         }
     }
 }
