@@ -1,8 +1,7 @@
 package com.mopl.jpa.repository.notification.query;
 
-import com.mopl.domain.model.notification.NotificationLevel;
 import com.mopl.domain.model.notification.NotificationModel;
-import com.mopl.domain.model.user.UserModel.AuthProvider;
+import com.mopl.domain.model.user.UserModel;
 import com.mopl.domain.model.user.UserModel.Role;
 import com.mopl.domain.repository.notification.NotificationQueryRepository;
 import com.mopl.domain.repository.notification.NotificationQueryRequest;
@@ -29,7 +28,7 @@ import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-@DataJpaTest
+@DataJpaTest(showSql = false)
 @Import({
     JpaConfig.class,
     QuerydslConfig.class,
@@ -57,20 +56,20 @@ class NotificationQueryRepositoryImplTest {
         Instant baseTime = Instant.now().truncatedTo(ChronoUnit.MILLIS);
 
         // user1의 알림 5개 생성
-        createAndPersistNotification("알림1", "내용1", NotificationLevel.INFO, user1, baseTime);
-        createAndPersistNotification("알림2", "내용2", NotificationLevel.WARNING, user1, baseTime
+        createAndPersistNotification("알림1", "내용1", NotificationModel.NotificationLevel.INFO, user1, baseTime);
+        createAndPersistNotification("알림2", "내용2", NotificationModel.NotificationLevel.WARNING, user1, baseTime
             .plusSeconds(1));
-        createAndPersistNotification("알림3", "내용3", NotificationLevel.ERROR, user1, baseTime
+        createAndPersistNotification("알림3", "내용3", NotificationModel.NotificationLevel.ERROR, user1, baseTime
             .plusSeconds(2));
-        createAndPersistNotification("알림4", "내용4", NotificationLevel.INFO, user1, baseTime
+        createAndPersistNotification("알림4", "내용4", NotificationModel.NotificationLevel.INFO, user1, baseTime
             .plusSeconds(3));
-        createAndPersistNotification("알림5", "내용5", NotificationLevel.WARNING, user1, baseTime
+        createAndPersistNotification("알림5", "내용5", NotificationModel.NotificationLevel.WARNING, user1, baseTime
             .plusSeconds(4));
 
         // user2의 알림 2개 생성
-        createAndPersistNotification("다른알림1", "다른내용1", NotificationLevel.INFO, user2, baseTime
+        createAndPersistNotification("다른알림1", "다른내용1", NotificationModel.NotificationLevel.INFO, user2, baseTime
             .plusSeconds(5));
-        createAndPersistNotification("다른알림2", "다른내용2", NotificationLevel.ERROR, user2, baseTime
+        createAndPersistNotification("다른알림2", "다른내용2", NotificationModel.NotificationLevel.ERROR, user2, baseTime
             .plusSeconds(6));
 
         entityManager.flush();
@@ -79,7 +78,7 @@ class NotificationQueryRepositoryImplTest {
 
     private UserEntity createAndPersistUser(String email, String name) {
         UserEntity entity = UserEntity.builder()
-            .authProvider(AuthProvider.EMAIL)
+            .authProvider(UserModel.AuthProvider.EMAIL)
             .email(email)
             .name(name)
             .password("encodedPassword")
@@ -93,7 +92,7 @@ class NotificationQueryRepositoryImplTest {
     private void createAndPersistNotification(
         String title,
         String content,
-        NotificationLevel level,
+        NotificationModel.NotificationLevel level,
         UserEntity receiver,
         Instant createdAt
     ) {
@@ -102,7 +101,7 @@ class NotificationQueryRepositoryImplTest {
             .title(title)
             .content(content)
             .level(level)
-            .receiver(receiver)
+            .receiverId(receiver.getId())
             .build();
         entityManager.persist(entity);
     }
@@ -128,7 +127,7 @@ class NotificationQueryRepositoryImplTest {
             assertThat(response.data()).hasSize(5);
             assertThat(response.totalCount()).isEqualTo(5);
             assertThat(response.data())
-                .allMatch(n -> n.getReceiver().getId().equals(user1.getId()));
+                .allMatch(n -> n.getReceiverId().equals(user1.getId()));
         }
 
         @Test
@@ -148,7 +147,7 @@ class NotificationQueryRepositoryImplTest {
             assertThat(response.data()).hasSize(2);
             assertThat(response.totalCount()).isEqualTo(2);
             assertThat(response.data())
-                .allMatch(n -> n.getReceiver().getId().equals(user2.getId()));
+                .allMatch(n -> n.getReceiverId().equals(user2.getId()));
         }
 
         @Test
@@ -180,8 +179,8 @@ class NotificationQueryRepositoryImplTest {
                 .createdAt(now)
                 .title("삭제된 알림")
                 .content("삭제된 내용")
-                .level(NotificationLevel.INFO)
-                .receiver(user1)
+                .level(NotificationModel.NotificationLevel.INFO)
+                .receiverId(user1.getId())
                 .deletedAt(now)
                 .build();
             entityManager.persist(deletedNotification);
@@ -340,7 +339,7 @@ class NotificationQueryRepositoryImplTest {
 
             // then
             assertThat(thirdResponse.data()).hasSize(1);
-            assertThat(thirdResponse.data().get(0).getTitle()).isEqualTo("알림5");
+            assertThat(thirdResponse.data().getFirst().getTitle()).isEqualTo("알림5");
             assertThat(thirdResponse.hasNext()).isFalse();
             assertThat(thirdResponse.nextCursor()).isNull();
         }
